tests/NormalTests/paczka1/fuzzy1/57923718.err
Error in line 3: S742 S322 95,8
Error in line 12: GQR0OadQT S141 58,1
Error in line 17: S742 S|22 |0,2
Error in line 14: S742 S141 90,4
Error in line 28: niT3ii0 S322 -1,2
Error in line 33: 6Wqk4Oxjnh Sx4x 2x4,9
Error in line 34: niT3ii0 S322 250,0
Error in line 40: niT3ii0 S141 4,90
